# invo

./: .dockerignore  .editorconfig  .env.dev  .env.example  .env.production  .gitignore  .tool-versions  ARCHITECTURE.md  README.md  dobi.yaml  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.do/: app.yaml
.docker/django/: Dockerfile  Dockerfile.builder  Dockerfile.prod  Dockerfile.temp  app  docker-entrypoint.sh
.docker/nginx/: nginx.conf
.github/: dependabot.yml
.github/workflows/: tests.yml
app/: .gitignore  pf.com.developerprofile
app/Invo/Invo/: API.swift  ActiveSituations.graphql  ContentView.swift  InvoApp.swift  Network.swift  schema.json
app/Invo/Invo WatchKit App/: Info.plist
app/Invo/Invo WatchKit Extension/: ComplicationController.swift  ContentView.swift  Info.plist  InvoApp.swift  NotificationController.swift  NotificationView.swift
invo/: asgi.py  settings.py  supervisord.conf  urls.py  wsgi.py
invo/apps/accounts/: __init__.py  admin.py  apps.py  models.py  resolvers.py  schema.graphql  serializers.py  tasks.py  types.py
invo/apps/accounts/migrations/: 0001_initial.py  0002_auto_20210116_2115.py  0003_auto_20210124_0003.py
invo/apps/entity_search/: resolvers.py  schema.graphql
invo/apps/entity_search/templates/search/indexes/items/: consumable_text.txt
invo/apps/graph/: __init__.py  app.py  asgi.py  consumers.py  middleware.py  resolvers.py  scalars.py  schema.graphql  schema.py  signals.py  types.py  views.py
invo/apps/items/: __init__.py  admin.py  managers.py  models.py  querysets.py  resolvers.py  schema.graphql  search_indexes.py  serializers.py  tests.py  types.py
invo/apps/items/migrations/: 0001_initial.py  0002_item_deleted.py  0003_auto_20201007_0021.py  0004_auto_20201023_0254.py  0005_auto_20201202_2227.py  0006_auto_20210116_2010.py  0007_auto_20210124_0003.py  0008_consumableevent_itemevent_toolevent_trackedconsumableevent.py  0009_auto_20210327_1731.py  0010_auto_20210515_1004.py
invo/apps/items/models/: __init__.py  configuration.py  item_types.py
invo/apps/items/tests/: test_models.py
invo/apps/owners/: models.py  resolvers.py  schema.graphql
invo/apps/protocol/: apps.py  models.py  resolvers.py  schema.graphql  types.py  urls.py  views.py
invo/apps/protocol/templates/protocol/: qr.html
invo/apps/protocol/tests/: test_irn.py
invo/apps/situations/: __init__.py  admin.py  apps.py  conditions.py  managers.py  models.py  querysets.py  resolvers.py  schema.graphql  tests.py  types.py
invo/apps/situations/migrations/: 0001_initial.py  0002_auto_20201028_1852.py  0003_auto_20201122_1237.py  0004_auto_20201122_1648.py  0005_situation_site.py  0006_auto_20210124_0005.py
invo/apps/situations/tests/: test_conditions.py  test_models.py  test_queryset.py  test_resolvers.py
invo/apps/spaces/: admin.py  apps.py  filters.py  layouts.py  managers.py  models.py  resolvers.py  schema.graphql  search_indexes.py  serializers.py  tests.py  types.py
invo/apps/spaces/migrations/: 0001_initial.py  0002_auto_20201006_0325.py  0002_gridspacenode_position.py  0003_auto_20201005_0253.py  0003_auto_20201006_0325.py  0004_auto_20201005_0307.py  0004_auto_20201006_0439.py  0005_auto_20201005_0325.py  0005_auto_20201023_0254.py  0006_auto_20201122_1237.py  0007_auto_20201129_1131.py  0008_auto_20201204_2238.py  0009_auto_20201224_1518.py  0010_auto_20210116_2010.py  0011_auto_20210116_2120.py  0012_auto_20210124_0005.py
invo/apps/spaces/tests/: test_layout_recon.py  test_models.py  test_serializers.py
invo/config/: __init__.py  build.py  common.py  local.py  ngrok.py  prod.py  sentry.py  test.py  values.py
invo/config/mixins/: waffle.py
invo/utils/: pghistory.py  protocol.py
pwa/: .env.ngrok  .eslintcache  .prettierignore  README.md  codegen.yml  package-lock.json  package.json  tsconfig.json
pwa/codegen_plugins/: jsonSchema.js
pwa/holding/: EntityListItem.tsx  SelectionDialog.tsx
pwa/public/: index.html
pwa/src/: App.tsx  globalKeyMap.ts  index.tsx  routes.ts  routes.tsx  theme.ts
pwa/src/client/: auth.tsx  index.ts  types.ts
pwa/src/components/: SearchDialog.tsx
pwa/src/components/ListItems/: ItemListItem.tsx  SpaceListItem.tsx
pwa/src/components/autocompletes/: ItemSearchAutocomplete.tsx
pwa/src/components/dialogs/: AddItemDialog.tsx  SearchDialog.tsx  ShortcutDialog.tsx
pwa/src/components/dialogs/AddItemDialog/: AddItemDialog.tsx  addItemSchema.ts  index.ts
pwa/src/components/dialogs/AddItemDialog/forms/: BaseItemForm.tsx  ConsumableForm.tsx
pwa/src/components/dialogs/AddSpaceDialog/: AddSpaceDialog.tsx  addSpaceSchema.ts  index.ts
pwa/src/components/dialogs/AddSpaceDialog/forms/: BaseSpaceNodeForm.tsx  GridSpaceNodeForm.tsx
pwa/src/components/forms/: AddSpaceForm.tsx
pwa/src/components/listItems/: ItemListContent.tsx  SpaceListContent.tsx
pwa/src/context/: SituationContext.tsx
pwa/src/customTypings/: .d.ts  jwt.d.ts  urn-lib.d.ts
pwa/src/hooks/: useSitu.ts  useWidth.ts
pwa/src/layout/: Header.tsx  Root.tsx  SituationDrawer.tsx  UnAuthedRoot.tsx
pwa/src/queries/: auth.ts  fragments.ts  items.ts  search.ts  situations.ts  spaces.ts
pwa/src/utils/: form.ts  relay.ts  urns.ts  yup.ts
pwa/src/views/: AllSpaces.tsx  Examples.tsx  RootSpace.tsx  SituationCenter.tsx  Situations.tsx  Space.tsx
pwa/src/views/Space/: Space.tsx  index.ts
pwa/src/views/Space/components/: ItemsList.tsx
pwa/src/views/auth/: Login.tsx  SignUp.tsx  loginSchema.ts  signupSchema.ts
scripts/: build.sh  push-build.sh  update-app.sh
